# Tina2d

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.claude/: mcp.json  settings-我的.json  settings.json  settings.local.json
Source/: CMakeLists.txt
Source/Extras/: CMakeLists.txt
Source/Samples/: CMakeLists.txt  Sample.inl
Source/Samples/01_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
Source/Samples/47_Typography/: Typography.cpp
Source/Samples/48_MSDFText/: CMakeLists.txt  MSDFText.cpp  MSDFText.h
Source/Samples/52_2_5DCore/: 52_2_5DCore.cpp  CMakeLists.txt
Source/Tools/: CMakeLists.txt
Source/Tools/Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h
Source/Tools/Editor/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  ResourcePanel.cpp  ResourcePanel.h
Source/Tools/Editor/Services/: SelectionService.h
Source/Urho3D/: CMakeLists.txt  DebugNew.h  Precompiled.h
Source/Urho3D/AngelScript/: APITemplates.h
Source/Urho3D/Audio/: Audio.cpp  Audio.h  BufferedSoundStream.cpp  OggVorbisSoundStream.cpp  Sound.cpp  SoundSource.cpp  SoundSource3D.cpp  SoundSource3D.h
Source/Urho3D/Container/: Allocator.cpp  Array.h  ArrayPtr.h  Deque.h  Hash.h  HashBase.cpp  HashMap.h  HashSet.h  List.h  OrderedMap.h  Pair.h  PriorityQueue.h  Queue.h  STLAdapter.cpp  STLAdapter.h  Set.h  Sort.h  Stack.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h
Source/Urho3D/Core/: AllocatorPerformanceTest.cpp  Attribute.h  Context.cpp  Context.h  EASTLAllocator.h  EASTLNew.cpp  GlobalNewDelete.h  MemoryHooks.cpp  MemoryHooks.h  MimallocOptimization.cpp  Object.cpp  ProcessUtils.cpp  Profiler.h  StringHashRegister.cpp  StringHashRegister.h  Variant.cpp  Variant.h
Source/Urho3D/Engine/: Application.cpp  Console.cpp  Console.h  DebugHud.cpp  Engine.cpp
Source/Urho3D/Graphics/: Batch.cpp  Batch.h  BgfxCustomAllocator.h  BgfxMiAllocator.cpp  BgfxMiAllocator.h  BgfxSDLPlatform.cpp  BgfxSDLPlatform.h  Camera.h  DebugRenderer.cpp  DebugRenderer.h  DrawableEvents.h  Graphics.cpp  Graphics.h  GraphicsBgfx.cpp  GraphicsBgfx.h  Light.cpp  Light.h  Material.cpp  Material.h  Octree.cpp  RenderPath.cpp  RenderPath.h  Renderer.cpp  Renderer.h  SpriteBatch.cpp  SpriteBatch.h  (+7 more)
cmake/Modules/: ShaderUtils.cmake  UrhoCommon.cmake
(+103 files in other folders)
